# website

./: .gitignore  .rustsec-ignore.txt  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  TODO.md  accounts-schema.sql  build.rs  deploy  deploy-receive  gen  testing.md
Attic/test/: 100.md  index.md
content/: about.en-person.md  en.en-de.md  person.de-about.md  projekte.de-projects.md  umwelt.de-climate.md
content/static/: main.css
data/: climate.en-umwelt.md  contact.md  de.de-en.md  en.en-de.md  index.de.md  index.md  kontakt.de-contact.md  projects.en-projekte.md  projects.md  projekte.de-projects.md  umwelt.de-climate.md
data-sqservice/: index.md
data-sqservice/files/: index.md
data/static/: main.css
includes/: ahtml_elements_include.rs
libs/ahtml/: Cargo.toml  README.md  TODO.md
libs/ahtml-from-markdown/: Cargo.toml
libs/ahtml-from-markdown/src/: lib.rs  markdown.rs  util.rs  webutils_simple.rs
libs/ahtml/resources/: generate-ahtml_elements-rs  global-attributes.txt
libs/ahtml/resources/merged/elements/: a.json  abbr.json  address.json  article.json  base.json  body.json  br.json  canvas.json  col.json  data.json  del.json  dfn.json  div.json  dl.json  dt.json  embed.json  fieldset.json  h1.json  h2.json  h3.json  h5.json  hgroup.json  iframe.json  img.json  ins.json  li.json  main.json  mark.json  meter.json  ol.json  pre.json  progress.json  ruby.json  section.json  select.json  slot.json  summary.json  sup.json  table.json  td.json  (+5 more)
libs/ahtml/src/: allocator.rs  arc_util.rs  flat.rs  lib.rs  more_vec.rs  myfrom.rs  stillvec.rs  util.rs
libs/ahtml/src/util/: autolink.rs  softpre.rs
libs/ahtml_html/: Cargo.toml  README.md  TODO.md
libs/ahtml_html/includes/: static_meta_db.rs
libs/ahtml_html/src/: lib.rs  meta.rs  myfrom.rs
libs/auri/: Cargo.toml
libs/auri/src/: lib.rs  ppath.rs  url_encoding.rs
libs/chj-util/: Cargo.toml  README.md
libs/chj-util/src/: dt.rs  lib.rs  partialbacktrace.rs  slice.rs  time_guard.rs  u24.rs  warn.rs
perllib/: Page.pm
resources/: generate-ahtml_elements-rs  generate-http_response_status_codes-rs  http-response-status-codes.txt
resources/merged/elements/: a.json  area.json  aside.json  audio.json  b.json  bdi.json  bdo.json  blockquote.json  button.json  caption.json  cite.json  code.json  colgroup.json  datalist.json  dd.json  details.json  dialog.json  em.json  figcaption.json  figure.json  footer.json  form.json  h4.json  h6.json  header.json  hr.json  html.json  i.json  input.json  kbd.json  label.json  legend.json  link.json  map.json  menu.json  meta.json  nav.json  object.json  optgroup.json  option.json  (+24 more)
src/: access_control.rs  acontext.rs  ahtml.rs  alist.rs  anyhow_util.rs  apachelog.rs  arequest.rs  aresponse.rs  auri.rs  blog.rs  boxed_error.rs  cmpfilemeta.rs  date_format.rs  date_format_website.rs  easy_fs.rs  easyfiletype.rs  handler.rs  hash_util.rs  hostrouter.rs  htmlsexpr.rs  http_request_method.rs  http_response_status_codes.rs  imageinfo.rs  in_threadpool.rs  io_util.rs  ipaddr_util.rs  lang.rs  lang_en_de.rs  language.rs  lib.rs  markdown.rs  miniarcswap.rs  myasstr.rs  myfrom.rs  nav.rs  option_util.rs  partialbacktrace.rs  path.rs  ppath.rs  random_util.rs  (+18 more)
src/access_control/: db.rs  macros.rs  sqliteposerror.rs  statements_and_methods.rs  transaction.rs  trimcheck.rs  types.rs  util.rs
src/html/: meta.rs  mod.rs  types.rs
src/style/: footnotes.rs
