[package]
name = "ahtml-from-markdown"
version = "0.1.0"
edition = "2021"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"
description = "Convert Markdown to ahtml HTML element trees"
repository = "https://github.com/pflanze/website"

[profile.dev]
panic = "abort"
# [profile.release]
# panic = "abort"
lto = "off"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
overflow-checks = true

[dependencies]
chj-util = { version = "0.2.0", path = "../chj-util" }
ahtml = { version = "0.7.0", path = "../ahtml" }
ahtml_html = { version = "0.1.0", path = "../ahtml_html" }
kstring = "1.0"
anyhow = { version = "1.0.14", features = ["backtrace"] }
pulldown-cmark = { version = "0.9", default-features = false, features = [] }
#cmark-syntax = { version = "0.4", default-features = false }
html5gum = { version = "0.5", default-features = false, features = [] }
num = "0.4"
thiserror = "1.0"
