[package]
name = "ahtml_html"
version = "0.1.0"
edition = "2021"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"
description = "A metainfo database for HTML abstractions"
repository = "https://github.com/pflanze/website"

[dependencies]
anyhow = "1.0.14"
kstring = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json= "1.0"

[profile.dev]
panic = "abort"
# [profile.release]
# panic = "abort"
lto = "off"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
overflow-checks = true
