[package]
name = "chj-util"
version = "0.1.0"
edition = "2021"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"
description = "A collection of utilities shared amongst my crates"

[dependencies]
backtrace = "0.3"

[profile.dev]
panic = "abort"
# [profile.release]
# panic = "abort"
lto = "off"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
overflow-checks = true
